[package]
name = "api_auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = [
    "bencher_endpoint/plus",
    "bencher_json/plus",
    "bencher_schema/plus",
    "bencher_token/plus",
]
sentry = ["bencher_schema/sentry"]
otel = ["dep:bencher_otel"]

[dependencies]
bencher_endpoint.workspace = true
bencher_json = { workspace = true, features = ["server", "schema", "db"] }
bencher_otel = { workspace = true, optional = true }
bencher_schema.workspace = true
bencher_token = { workspace = true, optional = true }
dropshot.workspace = true
http.workspace = true
schemars.workspace = true
serde.workspace = true
slog.workspace = true

[lints]
workspace = true
