[package]
name = "api_auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = [
    "bencher_endpoint/plus",
    "bencher_json/plus",
    "bencher_schema/plus",
    "bencher_token/plus",
]
sentry = ["bencher_schema/sentry"]
otel = ["dep:bencher_otel", "bencher_schema/otel"]

[dependencies]
bencher_endpoint.workspace = true
bencher_json = { workspace = true, features = ["server", "schema", "db"] }
bencher_otel = { workspace = true, optional = true }
bencher_schema.workspace = true
bencher_token = { workspace = true, optional = true }
dropshot.workspace = true
schemars.workspace = true
serde.workspace = true
slog.workspace = true

[dev-dependencies]
bencher_api_tests.workspace = true
bencher_json = { workspace = true, features = ["server", "schema"] }
http.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
