[package]
name = "api_checkout"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
plus = [
    "bencher_endpoint/plus",
    "bencher_json/plus",
    "bencher_schema/plus",
]
sentry = ["dep:sentry", "bencher_schema/sentry"]

[dependencies]
bencher_endpoint.workspace = true
bencher_json = { workspace = true, features = ["server", "schema"] }
bencher_rbac.workspace = true
bencher_schema.workspace = true
dropshot.workspace = true
sentry = { workspace = true, optional = true }

[lints]
workspace = true
