[package]
name = "api_checkout"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = [
    "dep:bencher_rbac",
    "dep:dropshot",
    "bencher_endpoint/plus",
    "bencher_json/plus",
    "bencher_schema/plus",
]
sentry = ["dep:sentry", "bencher_schema/sentry"]
otel = ["bencher_endpoint/otel", "bencher_schema/otel"]

[dependencies]
bencher_endpoint = { workspace = true, optional = true }
bencher_json = { workspace = true, optional = true, features = [
    "server",
    "schema",
] }
bencher_rbac = { workspace = true, optional = true }
bencher_schema = { workspace = true, optional = true }
dropshot = { workspace = true, optional = true }
sentry = { workspace = true, optional = true }

[lints]
workspace = true
