[package]
name = "api_run"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = ["bencher_endpoint/plus", "bencher_json/plus", "bencher_schema/plus"]
sentry = ["bencher_schema/sentry"]
otel = ["dep:bencher_otel", "bencher_schema/otel"]

[dependencies]
bencher_endpoint.workspace = true
bencher_json = { workspace = true, features = ["server", "schema", "db"] }
bencher_otel = { workspace = true, optional = true }
bencher_rbac.workspace = true
bencher_schema.workspace = true
dropshot.workspace = true
slog.workspace = true

[lints]
workspace = true
