[package]
name = "api_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = [
    "bencher_endpoint/plus",
    "bencher_config/plus",
    "bencher_json/plus",
    "bencher_schema/plus",
]
sentry = ["bencher_config/sentry", "bencher_schema/sentry"]

[dependencies]
bencher_endpoint.workspace = true
bencher_config.workspace = true
bencher_json = { workspace = true, features = ["server", "schema", "db"] }
bencher_schema.workspace = true
dropshot.workspace = true
serde_json.workspace = true
slog.workspace = true
tokio = { workspace = true, features = ["fs"] }

[lints]
workspace = true
