[package]
name = "bencher_adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
plus = ["bencher_json/plus"]

[dependencies]
# Workspace
bencher_json = { workspace = true, features = ["server"] }
literally.workspace = true
ordered-float.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Crate
nom = "7.1"
rust_decimal = { version = "1.36", features = ["serde-with-float"] }
strip-ansi-escapes = "0.2"

[dev-dependencies]
# Workspace
pretty_assertions.workspace = true
# Crate
criterion = "0.5"

[lints]
workspace = true

[[bench]]
name = "adapter"
harness = false
