[package]
name = "bencher_adapter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = ["bencher_json/plus"]

[dependencies]
bencher_json = { workspace = true, features = ["server"] }
literally.workspace = true
nom.workspace = true
ordered-float.workspace = true
rust_decimal = { workspace = true, features = ["serde-with-float"] }
serde.workspace = true
serde_json.workspace = true
strip-ansi-escapes.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true

[[bench]]
name = "adapter"
harness = false
