[package]
name = "bencher_api_tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = ["plus"]
plus = [
    "bencher_api/plus",
    "bencher_config/plus",
    "bencher_oci_storage/plus",
    "bencher_schema/plus",
    "dep:bencher_license",
    "dep:bencher_oci_storage",
]

[dependencies]
bencher_api.workspace = true
bencher_config.workspace = true
bencher_endpoint.workspace = true
bencher_json = { workspace = true, features = ["server", "schema", "db", "test-clock"] }
bencher_license = { workspace = true, optional = true }
bencher_oci_storage = { workspace = true, optional = true, features = ["test-clock"] }
bencher_rbac.workspace = true
bencher_schema.workspace = true
bencher_token.workspace = true
diesel = { workspace = true, features = ["sqlite"] }
dropshot.workspace = true
hex.workspace = true
http.workspace = true
libsqlite3-sys.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
sha2.workspace = true
slog.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
