[package]
name = "bencher_boundary"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
plus = ["bencher_json/plus"]

[dependencies]
bencher_json = { workspace = true, features = ["full"] }
ordered-float.workspace = true
slog.workspace = true
thiserror.workspace = true
# Crate
statrs = "0.16"

[dev-dependencies]
bencher_logger.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
