[package]
name = "bencher_boundary"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
full = ["bencher_json/full"]
lite = ["bencher_json/lite"]
plus = ["bencher_json/plus"]

[dependencies]
bencher_json.workspace = true
ordered-float.workspace = true
slog.workspace = true
thiserror.workspace = true
# Crate
statrs = "0.17"

[dev-dependencies]
bencher_logger.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
