[package]
name = "bencher_boundary"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
client = ["bencher_json/client"]
server = ["bencher_json/server"]
plus = ["bencher_json/plus"]

[dependencies]
bencher_json.workspace = true
slog.workspace = true
statrs.workspace = true
thiserror.workspace = true

[dev-dependencies]
bencher_logger.workspace = true
ordered-float.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
