[package]
name = "bencher_chrome"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Workspace
tokio = { workspace = true, features = ["fs", "rt", "sync", "time"] }
# OLD
anyhow = "1"
base64 = "0.21"
derive_builder = "0.12"
log = "0.4"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
url = "2.3"
which = "4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[dev-dependencies]
# Workspace
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
# OLD
chrono = { version = "0.4", default_features = false, features = ["clock"] }
env_logger = "0.10"
filepath = "0.1.1"
jpeg-decoder = { version = "0.3", default_features = false }
png = { version = "0.17" }
tiny_http = "0.12"

[build-dependencies]
auto_generate_cdp = "0.4.1"

[lib]
name = "bencher_chrome"
path = "src/lib.rs"
