[package]
name = "bencher_client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["lite", "plus"]
full = ["bencher_json/full"]
lite = ["bencher_json/lite"]
plus = ["bencher_json/plus"]

[dependencies]
bencher_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
progenitor-client.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[build-dependencies]
progenitor.workspace = true
serde_json.workspace = true
# Crate
prettyplease = "0.2"
syn = "2.0"
