[package]
name = "bencher_client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["lite", "plus", "rustls-tls"]
full = ["bencher_json/full"]
lite = ["bencher_json/lite"]
plus = ["bencher_json/plus"]
# Reqwest TLS
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
# Workspace
bencher_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
progenitor-client.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
# Crate
bytes = "1.7"

[build-dependencies]
progenitor.workspace = true
serde_json.workspace = true
# Crate
prettyplease = "0.2"
syn = "2.0"

[lints]
workspace = true
