[package]
name = "bencher_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
client = ["bencher_json/client"]
server = ["bencher_json/server"]
plus = ["bencher_json/plus"]
# Reqwest TLS
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "reqwest/rustls-tls-native-roots"]

[dependencies]
bencher_json.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
fs-err.workspace = true
progenitor-client.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[build-dependencies]
prettyplease.workspace = true
progenitor.workspace = true
serde_json.workspace = true
syn.workspace = true

[lints]
workspace = true
