[package]
name = "bencher_comment"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
plus = ["bencher_json/plus"]

[dependencies]
bencher_json.workspace = true
ordered-float.workspace = true
serde_json.workspace = true
url.workspace = true

[lints]
workspace = true
