[package]
name = "bencher_comment"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = ["bencher_json/plus"]

[dependencies]
bencher_json.workspace = true
ordered-float.workspace = true
serde_json.workspace = true
url.workspace = true

[lints]
workspace = true
