[package]
name = "bencher_config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
plus = [
    "dep:bencher_github_client",
    "dep:bencher_google_client",
    "dep:reqwest",
    "bencher_billing/plus",
    "bencher_endpoint/plus",
    "bencher_json/plus",
    "bencher_license/plus",
    "bencher_recaptcha/plus",
    "bencher_schema/plus",
]
sentry = ["bencher_schema/sentry"]
otel = ["bencher_endpoint/otel", "bencher_recaptcha/otel"]

[dependencies]
bencher_billing = { workspace = true, optional = true }
bencher_endpoint.workspace = true
bencher_github_client = { workspace = true, optional = true }
bencher_google_client = { workspace = true, optional = true }
bencher_json.workspace = true
bencher_license = { workspace = true, optional = true }
bencher_rbac.workspace = true
bencher_recaptcha = { workspace = true, optional = true }
bencher_schema.workspace = true
bencher_token.workspace = true
diesel.workspace = true
dropshot.workspace = true
oso.workspace = true
reqwest = { workspace = true, optional = true, features = ["rustls-tls"] }
serde_json.workspace = true
slog.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
