[package]
name = "bencher_context"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
client = ["dep:gix", "dep:uuid", "dep:windows"]
server = ["dep:uuid", "bencher_valid/server", "uuid/v4"]
schema = ["dep:schemars"]

[dependencies]
# Workspace
bencher_valid = { workspace = true, optional = true }
gix = { workspace = true, optional = true, features = ["revision"] }
schemars = { workspace = true, optional = true }
serde.workspace = true
typeshare.workspace = true
uuid = { workspace = true, optional = true, features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", optional = true, features = [
    "System_Profile_SystemManufacturers",
    "Win32_System_Registry",
] }

[lints]
workspace = true
