[package]
name = "bencher_context"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
client = ["dep:gix", "dep:uuid", "dep:windows", "bencher_valid/client"]
server = ["bencher_valid/server"]
schema = ["dep:schemars"]

[dependencies]
bencher_valid = { workspace = true, optional = true }
gix = { workspace = true, optional = true, features = ["revision"] }
schemars = { workspace = true, optional = true }
serde.workspace = true
typeshare.workspace = true
uuid = { workspace = true, optional = true, features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, optional = true, features = [
    "System_Profile_SystemManufacturers",
    "Win32_System_Registry",
] }

[lints]
workspace = true
