[package]
name = "bencher_github"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bencher_valid.workspace = true
octocrab.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true
# Crate
oauth2 = "4.4"

[lints]
workspace = true
