[package]
name = "bencher_json"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
client = ["bencher_context/client", "bencher_valid/client"]
table = ["dep:tabled"]
server = ["bencher_valid/server"]
schema = ["dep:schemars", "bencher_context/schema", "ordered-float/schemars"]
db = ["diesel", "serde_yaml", "bencher_valid/db"]
plus = ["bencher_valid/plus"]

[dependencies]
# Workspace
bencher_context.workspace = true
bencher_valid = { workspace = true, features = ["schema"] }
chrono = { workspace = true, features = ["serde"] }
derive_more.workspace = true
diesel = { workspace = true, optional = true }
ordered-float = { workspace = true, features = ["serde"] }
schemars = { workspace = true, optional = true, features = ["chrono", "url"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_yaml = { workspace = true, optional = true }
slug.workspace = true
tabled = { workspace = true, optional = true }
thiserror.workspace = true
typeshare.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
# Create
percent-encoding = "2.3"

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
