[package]
name = "bencher_json"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
client = ["bencher_context/client", "bencher_valid/client"]
table = ["dep:tabled"]
server = ["bencher_context/server", "bencher_valid/server"]
schema = ["dep:schemars", "bencher_context/schema", "ordered-float/schemars"]
db = ["dep:diesel", "dep:serde_yaml", "bencher_valid/db"]
plus = ["bencher_valid/plus"]

[dependencies]
bencher_context.workspace = true
bencher_valid = { workspace = true, features = ["schema"] }
camino = { workspace = true, features = ["serde1"] }
derive_more.workspace = true
diesel = { workspace = true, optional = true }
ordered-float = { workspace = true, features = ["serde"] }
percent-encoding.workspace = true
schemars = { workspace = true, optional = true, features = ["chrono", "url"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_yaml = { workspace = true, optional = true }
tabled = { workspace = true, optional = true }
thiserror.workspace = true
typeshare.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
