[package]
name = "bencher_json"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = []
client = ["bencher_context/client", "bencher_valid/client", "bencher_litestream?/client"]
table = ["dep:tabled"]
server = ["bencher_context/server", "bencher_valid/server", "bencher_litestream?/server"]
schema = [
    "dep:schemars",
    "bencher_context/schema",
    "ordered-float/schemars",
    "bencher_litestream?/schema",
]
db = ["dep:diesel", "bencher_valid/db", "bencher_litestream?/yaml"]
plus = ["dep:camino", "dep:bencher_litestream", "bencher_valid/plus"]
test-clock = ["bencher_valid/test-clock"]

[dependencies]
bencher_context.workspace = true
bencher_litestream = { workspace = true, optional = true }
bencher_valid = { workspace = true, features = ["schema"] }
camino = { workspace = true, features = ["serde1"], optional = true }
derive_more.workspace = true
diesel = { workspace = true, optional = true }
ordered-float = { workspace = true, features = ["serde"] }
percent-encoding.workspace = true
schemars = { workspace = true, optional = true, features = ["chrono", "url"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tabled = { workspace = true, optional = true }
thiserror.workspace = true
typeshare.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true
