[package]
name = "bencher_noise"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[dependencies]
bencher_adapter.workspace = true
bencher_json = { workspace = true, features = ["client"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
