[package]
name = "bencher_plot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = ["full"]
client = ["bencher_json/client"]
full = ["bencher_json/full"]

[dependencies]
bencher_json.workspace = true
chrono.workspace = true
ordered-float.workspace = true
thiserror.workspace = true
# Crate
image = "0.25"
plotters = { version = "0.3", features = ["datetime"] }
plotters-bitmap = "0.3"

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
