[package]
name = "bencher_plot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[features]
default = ["server"]
client = ["bencher_json/client"]
server = ["bencher_json/server"]

[dependencies]
bencher_json.workspace = true
chrono.workspace = true
ordered-float.workspace = true
thiserror.workspace = true
# Crate
image = "0.25"
plotters = { version = "0.3", features = ["datetime"] }
plotters-bitmap = "0.3"

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
