[package]
name = "bencher_plot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[dependencies]
bencher_json = {workspace = true, features = ["server"] }
chrono.workspace = true
image.workspace = true
ordered-float.workspace = true
plotters = { workspace = true, features = ["datetime"] }
plotters-bitmap.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
