[package]
name = "bencher_rank"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[dependencies]
diesel.workspace = true

[dev-dependencies]
diesel = { workspace = true, features = ["sqlite"] }
libsqlite3-sys.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
